@@ -2,6 +2,7 @@
 
 	New features:
 	-------------
+	+ Ability to import subnets from RIPE by AS in admin section;
 
 	Bugfixes / enhancements:
 	------------------------
